# web-server

./: Cargo.toml  fixtures.sql  schema.sql
src/: main.rs
templates/: base.html  detail.html  login.html  modify.html  register.html
