[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.8"
minijinja = "2.19.0"
password-auth = "0.3"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.51.1", features = ["full", "test-util"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
